--- a/devfile.yaml
+++ b/devfile.yaml
@@ -13,7 +13,7 @@ components:
         - name: CONCURRENTLY_OPTS
           value: -m 1
         - name: USE_JAVA17
-          value: 'true'
+          value: "true"
       endpoints:
         - name: openvsx
           exposure: internal
